--- a/src/dvi.html
+++ b/src/dvi.html
@@ -26,6 +26,7 @@
                     <li>Умножение</li>
                     <li>Деление</li>
                     <li>Возведение в степень</li>
+                    <li>возведение в степень слудует записывать по этому примеру - 2^(2^3)</li>
                     <li>Остаток от деления</li>
                     <li>Унарный плюс</li>
                     <li>Унарный минус</li>
